# CraftingInterpreters

./: .gitignore  Cargo.toml  README.md
notes/CraftingInterpreter TODOList/: 04-27-2023.typ  04-28-2023.typ  04-29-2023.typ  04-30-2023.typ  05-02-2023.typ  main.typ  new_day.py  template.typ
rox-ast/: Cargo.toml
rox-interpreter/: Cargo.toml
