[package]
name = "rox-interpreter"
version = "0.1.0"
authors = ["ZoukiRi"]
edition = "2021"
license = "MIT"
description = "A simple tree-walking interpreter for the Rox programming language."
repository = "https://github.com/ZoukiLi/CraftingInterpreters/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
